# archivestream

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.crawler  Dockerfile.indexer  Dockerfile.rust  Makefile  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.decentralized.yml  docker-compose.observability.yml
.github/workflows/: docker-publish.yml  helm-release.yml
apps/extension/: manifest.json  popup.html  popup.js
apps/web-ui/: package-lock.json  package.json
apps/web-ui/src/app/: page.tsx
apps/web-ui/src/app/dashboard/: page.tsx
apps/web-ui/src/app/web/[timestamp]/[...url]/: page.tsx
apps/web-ui/src/components/: DiffViewer.tsx  TimeScrubber.tsx  VisualDiff.tsx
apps/web-ui/src/components/dashboard/: CrawlOutcomes.tsx  FrontierHeatmap.tsx
contracts/: SnapshotRegistry.sol
crates/archive-api/: Cargo.toml
crates/archive-api/src/: diff.rs  main.rs  search.rs  semantic.rs
crates/archive-api/src/replay/: mod.rs  resolver.rs  rewriter.rs  warc_reader.rs
crates/common/src/: extractor.rs  lib.rs  tracing.rs  zerocopy.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: dedup.rs  fetcher.rs  frontier.rs  lib.rs  main.rs  rate_limit.rs  region.rs  warc.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: main.rs  opensearch_client.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: lib.rs
crates/ipfs/: Cargo.toml
crates/ipfs/src/: lib.rs  storage.rs
crates/notification/: Cargo.toml
crates/notification/src/: lib.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: alert.rs  classifier.rs  lib.rs
crates/vision/: Cargo.toml
crates/vision/src/: detector.rs  lib.rs
docs/: API.md  API_V1.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PHASE_10_STATUS.md  PHASE_11_STATUS.md  PHASE_12_STATUS.md  PHASE_13_STATUS.md  PHASE_5C_STATUS.md  PLUGIN_DEVELOPMENT.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_REVIEW.md  SCALING.md  SCALING_MULTI_REGION.md  STORAGE.md
infra/: compose.yml
infra/community/alerts/: starter-rules.json
infra/docker/: ui.Dockerfile
infra/helm/archivestream/: Chart.yaml  values.yaml
infra/helm/archivestream/templates/: _helpers.tpl  api.yaml  crawler.yaml  ingress.yaml  ui.yaml
infra/migrations/: 20260109000000_init_schema.sql  phase4c_observability.sql  phase5c_multi_region.sql  phase8_alerts.sql
infra/observability/: prometheus.yml
infra/terraform/aws/: main.tf  rds.tf  s3.tf  variables.tf
scripts/: deploy.sh
sdk/js/: README.md  index.ts
sdk/python/: README.md  archivestream.py
