[workspace]
members = [
    "crates/crawler",
    "crates/archive-api",
    "crates/common",
    "crates/indexer",
    "crates/semantic",
    "crates/federation",
    "crates/intelligence",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["ArchiveStream Contributors"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/KhulnaSoft/ArchiveStream"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
lol_html = "1.2"
opensearch = "2.1"
similar = { version = "2.4", features = ["inline"] }
scraper = "0.18"

