[package]
name = "archive-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archive-common = { path = "../common" }
archive-semantic = { path = "../semantic" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
scraper = "0.18"
lol_html = "1.2"
opensearch.workspace = true
similar.workspace = true
uuid.workspace = true
chrono.workspace = true


