[package]
name = "archive-crawler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archive-common = { path = "../common" }
archive-intelligence = { path = "../intelligence" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
url.workspace = true
dotenvy.workspace = true
scraper = "0.18"
robotstxt = "0.3"
async-trait = "0.1"
futures = "0.3"
sha2 = "0.10"
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes = "1.5"
