[package]
name = "archive-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archive-common = { path = "../common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
opensearch.workspace = true
lol_html.workspace = true
scraper = "0.18"
url.workspace = true
reqwest.workspace = true
