[package]
name = "archive-notification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archive-common = { path = "../common" }
archive-semantic = { path = "../semantic" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true
anyhow.workspace = true
async-trait = "0.1"
uuid.workspace = true
chrono.workspace = true
