[package]
name = "archive-vision"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
imageproc = "0.23"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
base64 = "0.21"

# Computer vision
opencv = { version = "0.88", optional = true }

# Perceptual hashing
img_hash = "3.2"

# OCR
tesseract = { version = "0.13", optional = true }

[features]
default = []
opencv = ["dep:opencv"]
ocr = ["dep:tesseract"]
